--- a/style.css
+++ b/style.css
@@ -1,21 +1,41 @@
 .form {
-    margin: 0 auto 10px;
+    font-family: "Roboto", sans-serif;
+    margin: 30px auto;
     width: 40%;
     padding: 14px;
     background: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px #ccc;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+}
+
+.form label {
+    font-size: 17px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    width: 100%;
 }
 
 .form input[type="file"] {
     cursor: pointer;
+    margin-left: 8px;
+}
+
+.form textarea {
+    margin-left: 8px;
+    flex: 1;
+}
+
+.label_key {
+    display: flex;
 }
 
 .form input[type="submit"] {
     background: #1e90ff;
+    font-weight: 800;
     border: none;
     border-radius: 4px;
     color: #fff;
@@ -23,6 +43,7 @@
     font-size: 16px;
     padding: 8px 16px;
     transition: all 0.3s ease-in-out;
+    width: 100%;
 }
 
 .form input[type="submit"]:hover {
