--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
-.form {
+body {
     font-family: "Roboto", sans-serif;
-    margin: 30px auto;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 40%;
+    margin: 0 auto;
+}
+
+.form {
+    margin: 30px;
+    width: 100%;
     padding: 14px;
     background: #fff;
     border-radius: 8px;
@@ -48,4 +60,17 @@
 
 .form input[type="submit"]:hover {
     background: #1871fb;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 40px;
+    white-space: pre-line;
+    font-family: monospace;
+    font-size: 12px;
+}
+
+h4 {
+    color: #1871fb;
+    margin: 0 0 1px 0;
 }
