--- a/public/style.css
+++ b/public/style.css
@@ -90,3 +90,26 @@ h4 {
     color: #1871fb;
     margin: 0 0 1px 0;
 }
+
+.receive_button {
+    background: #1e90ff;
+    font-weight: 800;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 8px 16px;
+    /*margin-left: 15px;*/
+    /*margin-right: 15px;*/
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+}
+
+.receive_button:hover {
+    background: #1871fb;
+}
+
+.interaction-server-containter {
+    padding: 30px;
+}
